manifests_app/service_nlb.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-lb
  namespace: simple-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external 
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  selector:
    app: simple-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
